# scriptarium

./: .gitignore  README.md  docker-compose.yml
auto-wallpaper/: .gitignore  README.md  auto-wallpaper.py  requirements.txt  setup.sh  template-auto-wallpaper.plist
file-organiser/: Dockerfile  README.md  file-organiser.py  pyproject.toml
